store images added

--- a/app.json
+++ b/app.json
@@ -18,8 +18,8 @@
 		"homey:manager:api"
 	],
 	"images": {
-		"large": "/assets/images/large.png",
-		"small": "/assets/images/small.png"
+		"large": "/assets/images/large.jpg",
+		"small": "/assets/images/small.jpg"
 	},
 	"author": {
 		"name": "Robin de Gruijter",
