--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "id": "com.gruijter.powerhour",
-  "version": "2.3.0",
+  "version": "2.4.0",
   "compatibility": ">=3",
+  "brandColor": "#df5020",
   "sdk": 2,
   "name": {
     "en": "Power by the Hour"
@@ -488,8 +489,8 @@
                 "nl": "Update interval (minuten)"
               },
               "hint": {
-                "en": "Set to 0 to get immediate updates. This can however increase system load.",
-                "nl": "Zet op 0 voor directe updates. Dit kan echter de systeem belasting verhogen."
+                "en": "Set to 0 to get immediate updates. This can slightly increase system load.",
+                "nl": "Zet op 0 voor directe updates. Dit kan echter de systeem belasting iets verhogen."
               },
               "value": 0,
               "min": 0,
@@ -526,7 +527,7 @@
               },
               "value": 0,
               "hint": {
-                "en": "Enter the meter reading at the start of this day."
+                "en": "Enter the meter reading at the start of this day. It is automatically updated at midnight."
               }
             },
             {
@@ -538,7 +539,7 @@
               },
               "value": 0,
               "hint": {
-                "en": "Enter the meter reading at the start of this month."
+                "en": "Enter the meter reading at the start of this month. It is automatically updated first day of a new month."
               }
             },
             {
@@ -550,7 +551,7 @@
               },
               "value": 0,
               "hint": {
-                "en": "Enter the meter reading at the start of this year."
+                "en": "Enter the meter reading at the start of this year. It is automatically updated first day of a new year."
               }
             }
           ]
@@ -640,7 +641,7 @@
               },
               "value": 0,
               "hint": {
-                "en": "Enter the meter reading at the start of this month."
+                "en": "Enter the meter reading at the start of this month. It is automatically updated first day of a new month."
               }
             },
             {
@@ -652,7 +653,7 @@
               },
               "value": 0,
               "hint": {
-                "en": "Enter the meter reading at the start of this year."
+                "en": "Enter the meter reading at the start of this year. It is automatically updated first day of a new year."
               }
             }
           ]
@@ -742,7 +743,7 @@
               },
               "value": 0,
               "hint": {
-                "en": "Enter the meter reading at the start of this month."
+                "en": "Enter the meter reading at the start of this month. It is automatically updated first day of a new month."
               }
             },
             {
@@ -754,7 +755,7 @@
               },
               "value": 0,
               "hint": {
-                "en": "Enter the meter reading at the start of this year."
+                "en": "Enter the meter reading at the start of this year. It is automatically updated first day of a new year."
               }
             }
           ]
