--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "com.gruijter.powerhour",
-  "version": "2.4.1",
+  "version": "2.5.0",
   "compatibility": ">=3",
   "brandColor": "#df5020",
   "sdk": 2,
@@ -8,8 +8,8 @@
     "en": "Power by the Hour"
   },
   "description": {
-    "en": "Summarize the energy usage or (solar) production per hour, day, month and year",
-    "nl": "Samenvatten van energie verbruik of (zonnepaneel) productie per uur, dag, maand en jaar"
+    "en": "Summarize the energy/water usage or (solar) production per hour, day, month and year",
+    "nl": "Samenvatten van energie/water verbruik of (zonnepaneel) productie per uur, dag, maand en jaar"
   },
   "category": [
     "energy",
@@ -712,6 +712,19 @@
                 "nl": "Apparaat naam"
               },
               "value": "unknown"
+            },
+            {
+              "id": "homey_device_daily_reset",
+              "type": "checkbox",
+              "label": {
+                "en": "Has daily reset",
+                "nl": "Heeft dagelijkse reset"
+              },
+              "hint": {
+                "en": "The meter of this device resets every midnight to 0",
+                "nl": "De meter van dit apparaat reset naar 0 om middernacht"
+              },
+              "value": false
             }
           ]
         },
