--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "compatibility": ">=5.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -548,7 +548,7 @@
         "nl": "Deze dag"
       },
       "uiComponent": "sensor",
-      "icon": "/assets/kwh.svg",
+      "icon": "/assets/kwh_d.svg",
       "getable": true,
       "setable": false,
       "insights": false,
@@ -564,7 +564,7 @@
         "nl": "Dit uur"
       },
       "uiComponent": "sensor",
-      "icon": "/assets/kwh.svg",
+      "icon": "/assets/kwh_h.svg",
       "getable": true,
       "setable": false,
       "insights": true,
@@ -580,7 +580,7 @@
         "nl": "Deze maand"
       },
       "uiComponent": "sensor",
-      "icon": "/assets/kwh.svg",
+      "icon": "/assets/kwh_m.svg",
       "getable": true,
       "setable": false,
       "insights": false,
@@ -596,7 +596,7 @@
         "nl": "Dit jaar"
       },
       "uiComponent": "sensor",
-      "icon": "/assets/kwh.svg",
+      "icon": "/assets/kwh_y.svg",
       "getable": true,
       "setable": false,
       "insights": false,
@@ -672,7 +672,7 @@
         "nl": "Deze dag"
       },
       "uiComponent": "sensor",
-      "icon": "/assets/sigma.svg",
+      "icon": "/assets/m3_d.svg",
       "getable": true,
       "setable": false,
       "insights": false,
@@ -688,7 +688,7 @@
         "nl": "Dit uur"
       },
       "uiComponent": "sensor",
-      "icon": "/assets/sigma.svg",
+      "icon": "/assets/m3_h.svg",
       "getable": true,
       "setable": false,
       "insights": true,
@@ -704,7 +704,7 @@
         "nl": "Deze maand"
       },
       "uiComponent": "sensor",
-      "icon": "/assets/sigma.svg",
+      "icon": "/assets/m3_m.svg",
       "getable": true,
       "setable": false,
       "insights": false,
@@ -720,7 +720,7 @@
         "nl": "Dit jaar"
       },
       "uiComponent": "sensor",
-      "icon": "/assets/sigma.svg",
+      "icon": "/assets/m3_y.svg",
       "getable": true,
       "setable": false,
       "insights": false,
