--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -1,6 +1,6 @@
 {
   "id": "com.gruijter.powerhour",
-  "version": "3.3.1",
+  "version": "3.4.0",
   "compatibility": ">=5.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -8,8 +8,8 @@
     "en": "Power by the Hour"
   },
   "description": {
-    "en": "Summarize the energy/water usage or (solar) production per hour, day, month and year",
-    "nl": "Samenvatten van energie/water verbruik of (zonnepaneel) productie per uur, dag, maand en jaar"
+    "en": "Summarize the energy/water usage or (solar) production per hour, day, month and year. Use dynamic tariffs.",
+    "nl": "Samenvatten van energie/water verbruik of (zonnepaneel) productie per uur, dag, maand en jaar. Gebruik dynamische tarieven."
   },
   "category": "energy",
   "tags": {
@@ -25,7 +25,11 @@
       "gas",
       "water",
       "summarizer",
-      "insights"
+      "insights",
+      "cost",
+      "tariff",
+      "prediction",
+      "peak"
     ]
   },
   "permissions": [
