--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "3.4.0",
+  "version": "3.4.1",
   "compatibility": ">=5.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -827,7 +827,7 @@
       "type": "number",
       "title": {
         "en": "kWh this day",
-        "nl": "kWh dDeze dag"
+        "nl": "kWh deze dag"
       },
       "uiComponent": "sensor",
       "icon": "/assets/kwh_d.svg",
