--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -1,6 +1,6 @@
 {
   "id": "com.gruijter.powerhour",
-  "version": "3.5.1",
+  "version": "3.6.0",
   "compatibility": ">=5.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -20,6 +20,8 @@
       "tibber",
       "homewizzard",
       "solar panel",
+      "P1",
+      "DSMR",
       "energy",
       "power",
       "gas",
