--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "3.5.1",
+  "version": "3.6.0",
   "compatibility": ">=5.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -21,6 +21,8 @@
       "tibber",
       "homewizzard",
       "solar panel",
+      "P1",
+      "DSMR",
       "energy",
       "power",
       "gas",
@@ -386,6 +388,48 @@
                 "en": "Actual monetary value. It is automatically updated.",
                 "nl": "Actuele gelwaarde. Wordt automatisch geupdated."
               }
+            },
+            {
+              "id": "meter_money_last_day",
+              "type": "number",
+              "label": {
+                "en": "Monetary value prev. day",
+                "nl": "Geldwaarde van vorige dag"
+              },
+              "value": 0,
+              "decimals": 4,
+              "hint": {
+                "en": "Monetary value of the previous day. It is automatically updated.",
+                "nl": "Gelwaarde van de vorige dag. Wordt automatisch geupdated."
+              }
+            },
+            {
+              "id": "meter_money_last_month",
+              "type": "number",
+              "label": {
+                "en": "Monetary value prev. month",
+                "nl": "Geldwaarde van vorige maand"
+              },
+              "value": 0,
+              "decimals": 4,
+              "hint": {
+                "en": "Monetary value of the previous month. It is automatically updated.",
+                "nl": "Gelwaarde van de vorige maand. Wordt automatisch geupdated."
+              }
+            },
+            {
+              "id": "meter_money_last_year",
+              "type": "number",
+              "label": {
+                "en": "Monetary value prev. year",
+                "nl": "Geldwaarde van vorig jaar"
+              },
+              "value": 0,
+              "decimals": 4,
+              "hint": {
+                "en": "Monetary value of the previous year. It is automatically updated.",
+                "nl": "Gelwaarde van het vorige jaar. Wordt automatisch geupdated."
+              }
             }
           ]
         }
@@ -672,6 +716,48 @@
                 "en": "Actual monetary value. It is automatically updated.",
                 "nl": "Actuele gelwaarde. Wordt automatisch geupdated."
               }
+            },
+            {
+              "id": "meter_money_last_day",
+              "type": "number",
+              "label": {
+                "en": "Monetary value prev. day",
+                "nl": "Geldwaarde van vorige dag"
+              },
+              "value": 0,
+              "decimals": 4,
+              "hint": {
+                "en": "Monetary value of the previous day. It is automatically updated.",
+                "nl": "Gelwaarde van de vorige dag. Wordt automatisch geupdated."
+              }
+            },
+            {
+              "id": "meter_money_last_month",
+              "type": "number",
+              "label": {
+                "en": "Monetary value prev. month",
+                "nl": "Geldwaarde van vorige maand"
+              },
+              "value": 0,
+              "decimals": 4,
+              "hint": {
+                "en": "Monetary value of the previous month. It is automatically updated.",
+                "nl": "Gelwaarde van de vorige maand. Wordt automatisch geupdated."
+              }
+            },
+            {
+              "id": "meter_money_last_year",
+              "type": "number",
+              "label": {
+                "en": "Monetary value prev. year",
+                "nl": "Geldwaarde van vorig jaar"
+              },
+              "value": 0,
+              "decimals": 4,
+              "hint": {
+                "en": "Monetary value of the previous year. It is automatically updated.",
+                "nl": "Gelwaarde van het vorige jaar. Wordt automatisch geupdated."
+              }
             }
           ]
         }
@@ -916,6 +1002,48 @@
               "hint": {
                 "en": "Actual monetary value. It is automatically updated.",
                 "nl": "Actuele gelwaarde. Wordt automatisch geupdated."
+              }
+            },
+            {
+              "id": "meter_money_last_day",
+              "type": "number",
+              "label": {
+                "en": "Monetary value prev. day",
+                "nl": "Geldwaarde van vorige dag"
+              },
+              "value": 0,
+              "decimals": 4,
+              "hint": {
+                "en": "Monetary value of the previous day. It is automatically updated.",
+                "nl": "Gelwaarde van de vorige dag. Wordt automatisch geupdated."
+              }
+            },
+            {
+              "id": "meter_money_last_month",
+              "type": "number",
+              "label": {
+                "en": "Monetary value prev. month",
+                "nl": "Geldwaarde van vorige maand"
+              },
+              "value": 0,
+              "decimals": 4,
+              "hint": {
+                "en": "Monetary value of the previous month. It is automatically updated.",
+                "nl": "Gelwaarde van de vorige maand. Wordt automatisch geupdated."
+              }
+            },
+            {
+              "id": "meter_money_last_year",
+              "type": "number",
+              "label": {
+                "en": "Monetary value prev. year",
+                "nl": "Geldwaarde van vorig jaar"
+              },
+              "value": 0,
+              "decimals": 4,
+              "hint": {
+                "en": "Monetary value of the previous year. It is automatically updated.",
+                "nl": "Gelwaarde van het vorige jaar. Wordt automatisch geupdated."
               }
             }
           ]
@@ -1252,6 +1380,70 @@
       },
       "decimals": 4
     },
+    "meter_money_last_day": {
+      "type": "number",
+      "title": {
+        "en": "Money prev. day",
+        "nl": "Geld vorige dag"
+      },
+      "uiComponent": "sensor",
+      "icon": "/assets/money_d.svg",
+      "getable": true,
+      "setable": false,
+      "insights": true,
+      "units": {
+        "en": "¤"
+      },
+      "decimals": 2
+    },
+    "meter_money_last_hour": {
+      "type": "number",
+      "title": {
+        "en": "Money prev. hour",
+        "nl": "Geld vorig uur"
+      },
+      "uiComponent": "sensor",
+      "icon": "/assets/money_h.svg",
+      "getable": true,
+      "setable": false,
+      "insights": false,
+      "units": {
+        "en": "¤"
+      },
+      "decimals": 2
+    },
+    "meter_money_last_month": {
+      "type": "number",
+      "title": {
+        "en": "Money prev. month",
+        "nl": "Geld vorige maand"
+      },
+      "uiComponent": "sensor",
+      "icon": "/assets/money_m.svg",
+      "getable": true,
+      "setable": false,
+      "insights": false,
+      "units": {
+        "en": "¤"
+      },
+      "decimals": 2
+    },
+    "meter_money_last_year": {
+      "type": "number",
+      "title": {
+        "en": "Money prev. year",
+        "nl": "Geld vorig jaar"
+      },
+      "uiComponent": "sensor",
+      "icon": "/assets/money_y.svg",
+      "getable": true,
+      "setable": false,
+      "insights": false,
+      "units": {
+        "en": "¤"
+      },
+      "decimals": 2
+    },
     "meter_money_this_day": {
       "type": "number",
       "title": {
@@ -1310,7 +1502,7 @@
       "icon": "/assets/money_y.svg",
       "getable": true,
       "setable": false,
-      "insights": true,
+      "insights": false,
       "units": {
         "en": "¤"
       },
